<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toTopOf="@+id/btnRemover"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/salvar"
        app:layout_constraintBottom_toTopOf="@+id/btnRemover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnRemover"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/remover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputApelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apelido"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imgTelefone2"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_row="0"
        android:layout_column="3"
        android:contentDescription="@string/telefone"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/phone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/user"
        android:contentDescription="@string/user" />
</androidx.constraintlayout.widget.ConstraintLayout>